Adapt memory access for JDK 25