@@ -1,42 +1,67 @@
 package com.yomahub.roguemap.memory;
 
-import sun.misc.Unsafe;
-
-import java.lang.reflect.Field;
 import java.nio.ByteBuffer;
 
 /**
- * 使用 sun.misc.Unsafe 实现的底层内存操作（兼容 Java 8）
+ * 底层内存操作门面。
  *
- * 本类提供直接内存访问操作，用于高性能堆外存储。
- * 使用 Unsafe 实现零开销的内存操作。
+ * <p>Java 8-24 默认保持原有 sun.misc.Unsafe 实现，避免改变既有性能和行为。
+ * Java 25+ 默认切换到注册式 ByteBuffer 后端，避开 JDK 25 对 Unsafe 内存访问方法的运行时告警。
+ * 可通过 -Droguemap.memory.access=unsafe 或 -Droguemap.memory.access=registered 显式指定后端。</p>
  */
 public class UnsafeOps {
 
-    private static final Unsafe UNSAFE;
+    private static final String ACCESS_MODE_PROPERTY = "roguemap.memory.access";
+    private static final String MODE_AUTO = "auto";
+    private static final String MODE_UNSAFE = "unsafe";
+    private static final String MODE_REGISTERED = "registered";
 
-    /**
-     * java.nio.Buffer.address 字段的对象内偏移量。
-     * 用于替代 sun.nio.ch.DirectBuffer.address() 强制转换，实现 Java 8-21 兼容。
-     * Unsafe.objectFieldOffset() 不检查访问权限，无需 --add-opens java.base/sun.nio.ch。
-     */
-    private static final long BUFFER_ADDRESS_OFFSET;
+    private static final MemoryAccess ACCESS = createMemoryAccess();
 
-    static {
-        try {
-            Field field = Unsafe.class.getDeclaredField("theUnsafe");
-            field.setAccessible(true);
-            UNSAFE = (Unsafe) field.get(null);
-        } catch (Exception e) {
-            throw new RuntimeException("获取 Unsafe 实例失败", e);
+    private UnsafeOps() {
+    }
+
+    static String selectMemoryAccessMode(String configuredMode, int featureVersion) {
+        String mode = configuredMode;
+        if (mode == null || mode.trim().isEmpty()) {
+            mode = MODE_AUTO;
+        }
+        mode = mode.trim().toLowerCase();
+        if (MODE_UNSAFE.equals(mode) || MODE_REGISTERED.equals(mode)) {
+            return mode;
+        }
+        if (!MODE_AUTO.equals(mode)) {
+            throw new IllegalArgumentException("未知的 RogueMap 内存访问模式: " + configuredMode
+                    + "（支持 auto、unsafe、registered）");
+        }
+        return featureVersion >= 25 ? MODE_REGISTERED : MODE_UNSAFE;
+    }
+
+    public static String memoryAccessMode() {
+        return ACCESS instanceof RegisteredMemoryAccess ? MODE_REGISTERED : MODE_UNSAFE;
+    }
+
+    private static MemoryAccess createMemoryAccess() {
+        String mode = selectMemoryAccessMode(System.getProperty(ACCESS_MODE_PROPERTY), currentFeatureVersion());
+        if (MODE_REGISTERED.equals(mode)) {
+            return new RegisteredMemoryAccess();
+        }
+        return new UnsafeMemoryAccess();
+    }
+
+    private static int currentFeatureVersion() {
+        String specVersion = System.getProperty("java.specification.version", "8");
+        if (specVersion.startsWith("1.")) {
+            specVersion = specVersion.substring(2);
+        }
+        int dot = specVersion.indexOf('.');
+        if (dot >= 0) {
+            specVersion = specVersion.substring(0, dot);
         }
         try {
-            // java.nio.Buffer.address 字段自 Java 1.4 起存在，保存 direct buffer 的原生指针。
-            // objectFieldOffset 绕过访问控制，兼容 Java 8-21，无需任何 --add-opens 参数。
-            Field addressField = java.nio.Buffer.class.getDeclaredField("address");
-            BUFFER_ADDRESS_OFFSET = UNSAFE.objectFieldOffset(addressField);
-        } catch (Exception e) {
-            throw new RuntimeException("无法获取 Buffer.address 字段偏移量", e);
+            return Integer.parseInt(specVersion);
+        } catch (NumberFormatException e) {
+            return 8;
         }
     }
 
@@ -47,14 +72,7 @@ public class UnsafeOps {
      * @return 内存地址
      */
     public static long allocate(long size) {
-        if (size <= 0) {
-            throw new IllegalArgumentException("大小必须为正数: " + size);
-        }
-        long address = UNSAFE.allocateMemory(size);
-        if (address == 0) {
-            throw new OutOfMemoryError("分配 " + size + " 字节失败");
-        }
-        return address;
+        return ACCESS.allocate(size);
     }
 
     /**
@@ -65,14 +83,7 @@ public class UnsafeOps {
      * @return 新内存地址
      */
     public static long reallocate(long address, long newSize) {
-        if (newSize <= 0) {
-            throw new IllegalArgumentException("大小必须为正数: " + newSize);
-        }
-        long newAddress = UNSAFE.reallocateMemory(address, newSize);
-        if (newAddress == 0) {
-            throw new OutOfMemoryError("重新分配到 " + newSize + " 字节失败");
-        }
-        return newAddress;
+        return ACCESS.reallocate(address, newSize);
     }
 
     /**
@@ -81,9 +92,7 @@ public class UnsafeOps {
      * @param address 要释放的内存地址
      */
     public static void free(long address) {
-        if (address != 0) {
-            UNSAFE.freeMemory(address);
-        }
+        ACCESS.free(address);
     }
 
     /**
@@ -94,7 +103,7 @@ public class UnsafeOps {
      * @param value 要设置的字节值
      */
     public static void setMemory(long address, long size, byte value) {
-        UNSAFE.setMemory(address, size, value);
+        ACCESS.setMemory(address, size, value);
     }
 
     /**
@@ -105,7 +114,7 @@ public class UnsafeOps {
      * @param size 要复制的字节数
      */
     public static void copyMemory(long srcAddress, long dstAddress, long size) {
-        UNSAFE.copyMemory(srcAddress, dstAddress, size);
+        ACCESS.copyMemory(srcAddress, dstAddress, size);
     }
 
     /**
@@ -117,7 +126,7 @@ public class UnsafeOps {
      * @param length 要复制的字节数
      */
     public static void copyFromArray(byte[] src, int srcOffset, long dstAddress, int length) {
-        UNSAFE.copyMemory(src, Unsafe.ARRAY_BYTE_BASE_OFFSET + srcOffset, null, dstAddress, length);
+        ACCESS.copyFromArray(src, srcOffset, dstAddress, length);
     }
 
     /**
@@ -129,87 +138,85 @@ public class UnsafeOps {
      * @param length 要复制的字节数
      */
     public static void copyToArray(long srcAddress, byte[] dst, int dstOffset, int length) {
-        UNSAFE.copyMemory(null, srcAddress, dst, Unsafe.ARRAY_BYTE_BASE_OFFSET + dstOffset, length);
+        ACCESS.copyToArray(srcAddress, dst, dstOffset, length);
     }
 
-    // 原始类型操作
-
     public static byte getByte(long address) {
-        return UNSAFE.getByte(address);
+        return ACCESS.getByte(address);
     }
 
     public static void putByte(long address, byte value) {
-        UNSAFE.putByte(address, value);
+        ACCESS.putByte(address, value);
     }
 
     public static short getShort(long address) {
-        return UNSAFE.getShort(address);
+        return ACCESS.getShort(address);
     }
 
     public static void putShort(long address, short value) {
-        UNSAFE.putShort(address, value);
+        ACCESS.putShort(address, value);
     }
 
     public static int getInt(long address) {
-        return UNSAFE.getInt(address);
+        return ACCESS.getInt(address);
     }
 
     public static void putInt(long address, int value) {
-        UNSAFE.putInt(address, value);
+        ACCESS.putInt(address, value);
     }
 
     public static long getLong(long address) {
-        return UNSAFE.getLong(address);
+        return ACCESS.getLong(address);
     }
 
     public static void putLong(long address, long value) {
-        UNSAFE.putLong(address, value);
+        ACCESS.putLong(address, value);
     }
 
     public static float getFloat(long address) {
-        return UNSAFE.getFloat(address);
+        return ACCESS.getFloat(address);
     }
 
     public static void putFloat(long address, float value) {
-        UNSAFE.putFloat(address, value);
+        ACCESS.putFloat(address, value);
     }
 
     public static double getDouble(long address) {
-        return UNSAFE.getDouble(address);
+        return ACCESS.getDouble(address);
     }
 
     public static void putDouble(long address, double value) {
-        UNSAFE.putDouble(address, value);
+        ACCESS.putDouble(address, value);
     }
 
     /**
      * Volatile 读取操作，用于并发访问
      */
     public static int getIntVolatile(long address) {
-        return UNSAFE.getIntVolatile(null, address);
+        return ACCESS.getIntVolatile(address);
     }
 
     public static void putIntVolatile(long address, int value) {
-        UNSAFE.putIntVolatile(null, address, value);
+        ACCESS.putIntVolatile(address, value);
     }
 
     public static long getLongVolatile(long address) {
-        return UNSAFE.getLongVolatile(null, address);
+        return ACCESS.getLongVolatile(address);
     }
 
     public static void putLongVolatile(long address, long value) {
-        UNSAFE.putLongVolatile(null, address, value);
+        ACCESS.putLongVolatile(address, value);
     }
 
     /**
      * 比较并交换操作，用于无锁算法
      */
     public static boolean compareAndSwapInt(long address, int expected, int update) {
-        return UNSAFE.compareAndSwapInt(null, address, expected, update);
+        return ACCESS.compareAndSwapInt(address, expected, update);
     }
 
     public static boolean compareAndSwapLong(long address, long expected, long update) {
-        return UNSAFE.compareAndSwapLong(null, address, expected, update);
+        return ACCESS.compareAndSwapLong(address, expected, update);
     }
 
     /**
@@ -219,27 +226,26 @@ public class UnsafeOps {
      * @return 内存地址
      */
     public static long getDirectBufferAddress(ByteBuffer buffer) {
-        if (!buffer.isDirect()) {
-            throw new IllegalArgumentException("Buffer 必须是 direct 类型");
-        }
-        // 通过 Unsafe 直接读取 java.nio.Buffer.address 字段，替代 sun.nio.ch.DirectBuffer 强制转换。
-        // 等价于 sun.nio.ch.DirectBuffer.address()，但兼容 Java 8-21，无需 --add-opens 参数。
-        return UNSAFE.getLong(buffer, BUFFER_ADDRESS_OFFSET);
+        return ACCESS.getDirectBufferAddress(buffer);
+    }
+
+    static void releaseDirectBufferAddress(long address) {
+        ACCESS.releaseDirectBufferAddress(address);
     }
 
     /**
      * 内存屏障 - 确保所有加载/存储操作在线程间可见
      */
     public static void fullFence() {
-        UNSAFE.fullFence();
+        ACCESS.fullFence();
     }
 
     public static void loadFence() {
-        UNSAFE.loadFence();
+        ACCESS.loadFence();
     }
 
     public static void storeFence() {
-        UNSAFE.storeFence();
+        ACCESS.storeFence();
     }
 
     /**
@@ -247,7 +253,7 @@ public class UnsafeOps {
      */
     public static void putFloatArray(long address, float[] array) {
         for (int i = 0; i < array.length; i++) {
-            UNSAFE.putFloat(address + (i * 4L), array[i]);
+            ACCESS.putFloat(address + (i * 4L), array[i]);
         }
     }
 
@@ -257,7 +263,7 @@ public class UnsafeOps {
     public static float[] getFloatArray(long address, int length) {
         float[] array = new float[length];
         for (int i = 0; i < length; i++) {
-            array[i] = UNSAFE.getFloat(address + (i * 4L));
+            array[i] = ACCESS.getFloat(address + (i * 4L));
         }
         return array;
     }
